Add [GET] /tests/{testId}/favorites
