# apim/apis-functions-swagger.yaml
@@ -186,6 +186,58 @@ paths:
             application/json:
               schema:
                 type: string
+  /tests/{testId}/favorites:
+    get:
+      summary: お気に入り情報一覧取得API
+      description: 指定したテストID・ユーザーIDでのすべての問題番号におけるお気に入り情報を取得します
+      operationId: get-favorites
+      parameters:
+        - name: testId
+          in: path
+          description: テストID
+          required: true
+          schema:
+            type: string
+        - name: X-Access-Token
+          in: header
+          description: Microsoft ID Platformから発行されたアクセストークン
+          required: true
+          schema:
+            type: string
+        - name: X-User-Id
+          in: header
+          description: ユーザーID
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: サーバー処理が正常終了しました
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    questionNumber:
+                      type: integer
+                      description: 問題番号
+                    isFavorite:
+                      type: boolean
+                      description: お気に入りの場合はtrue、そうでない場合はfalse
+        "400":
+          description: リクエストパラメーターが不正です
+          content:
+            application/json:
+              schema:
+                type: string
+        "500":
+          description: サーバー処理が異常終了しました
+          content:
+            application/json:
+              schema:
+                type: string
   /tests/{testId}/favorites/{questionNumber}:
     post:
       summary: お気に入り情報保存API
